# MLOPS-Water-Potability-prediction

./: LICENSE  README.md  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  schema.yaml  scratch.py  setup.py  template.py
.github/workflows/: ci-cd.yaml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml
mlruns/0/: meta.yaml
mlruns/0/16b0f5ed26954b00b246710ade452d4d/: meta.yaml
mlruns/0/43a71bd2abfb4676b9875467b2cb57f4/: meta.yaml
mlruns/0/a5e3212523884ee88e303a1c755fc17a/: meta.yaml
mlruns/0/bd34c5df09ee4d2aa9c33c16d48ed47c/: meta.yaml
mlruns/0/ca2bcaafe14143439aec6a2d88d68c9c/: meta.yaml
mlruns/0/cd1c9f575a074f20afbcb07b5c0617e8/: meta.yaml
mlruns/0/d0d81a42f3c74d83b8e2d8a0fb216373/: meta.yaml
mlruns/0/f2f21c07b8ae42fba13d417e98395436/: meta.yaml
notebooks/: 01_data_ingestion.ipynb  02_data_cleaning.ipynb  02_data_validation.ipynb  03_data_validation.ipynb  04_data_transformation.ipynb  05_model_creation.ipynb  05_model_trainer.ipynb  06_model_evaluation.ipynb  07_model_prediction.ipynb  08_frontend.ipynb  data_preprocessing.ipynb  initial_data_exploration.ipynb  schema_data.json
src/mlops_water_potability_prediction_project/: __init__.py
src/mlops_water_potability_prediction_project/classes/: dataloadersaver.py
src/mlops_water_potability_prediction_project/components/: data_cleaning.py  data_ingestion.py  data_transformation.py  data_validation.py  frontend.py  model_evaluation.py  (+2 more)
web_app/template/: base.html  error.html  index.html
(+42 files in other folders)
