[tool.poetry]
name = "mlops-water-potability-prediction"
version = "0.1.0"
description = ""
authors = ["rajar <rajarajeshwarir2021@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
mlflow = "2.5.0"
notebook = "^7.0.7"
flask = "2.3.3"
ensure = "^1.0.4"
python-box = "^7.1.1"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pyyaml = "^6.0.1"
tqdm = "^4.66.1"
joblib = "^1.3.2"
types-pyyaml = "^6.0.12.12"
flask-cors = "^4.0.0"
scikit-learn = "^1.4.0"
opendatasets = "^0.1.22"
seaborn = "^0.13.2"
plotly = "^5.18.0"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
